# stockfeed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: configuration.md  contributing.md  dev-tools.md  getting-started.md  index.md  options.md  streaming.md
docs/api-reference/: client.md  exceptions.md  models.md
docs/architecture/: overview.md
docs/providers/: alpaca.md  coingecko.md  finnhub.md  overview.md  tiingo.md  tradier.md  twelvedata.md  yfinance.md
examples/: 01_ohlcv_yfinance.py  02_quote_and_ticker_info.py  03_cache.py  04_provider_health.py  05_async.py  06_paid_provider.py  07_options_data.py
src/stockfeed/: __init__.py  _utils.py  async_client.py  client.py  config.py  exceptions.py  logging.py
src/stockfeed/cache/: __init__.py  cli.py  connection.py  manager.py  market_hours.py  schema.py
src/stockfeed/dev/: __init__.py  simulator.py
src/stockfeed/models/: __init__.py  health.py  interval.py  ohlcv.py  (+4 more)
tests/: conftest.py
tests/e2e/: test_async_client.py  test_streaming.py  test_sync_client.py
tests/integration/: test_cache_flow.py  test_failover.py
tests/unit/: test_cache_manager.py  test_cache_schema.py  test_client.py  test_coingecko.py  test_config.py  test_config_options.py  test_connection.py  test_exceptions.py  test_health_checker.py  test_logging.py  test_market_hours.py  test_models.py  test_rate_limiter.py  test_registry.py  test_selector.py  test_simulator.py  test_streaming.py  test_utils.py
(+75 files in other folders)
