[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockfeed"
version = "0.1.0"
description = "Unified market data access for Python — stocks, futures, options, and crypto."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "duckdb>=0.10",
    "structlog>=24.0",
    "exchange-calendars>=4.5",
    "yfinance>=0.2",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "pytest-httpx",
    "ruff",
    "mypy",
    "types-python-dateutil",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
streaming = [
    "sse-starlette",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stockfeed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
